--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = 3c59811
-	trim = 
-	trimbase = 
+	base = 24096bf
+	trim = crazyflie_sim
+	trimbase = 3c59811
