--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = 35bc630
-	trim = 
-	trimbase = 
+	base = 2a2d285
+	trim = crazyflie_examples
+	trimbase = 35bc630
