--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = e59911f
-	trim = 
-	trimbase = 
+	base = 4f9228a
+	trim = crazyflie_interfaces
+	trimbase = e59911f
