--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = ae7d2ed
-	trim = 
-	trimbase = 
+	base = 77f7e9a
+	trim = crazyflie_py
+	trimbase = ae7d2ed
