--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = aa60273
-	trim = 
-	trimbase = 
+	base = b384eb5
+	trim = crazyflie
+	trimbase = aa60273
