--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_py
-	previous = 
-	base = 0ac5265
+	previous = 0ac5265
+	base = 4ec6a10
 	trim = 
 	trimbase = 
