--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie
-	previous = 
-	base = 0555785
+	previous = 0555785
+	base = e16a57e
 	trim = 
 	trimbase = 
