--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_interfaces
-	previous = 
-	base = 3a48b83
+	previous = 3a48b83
+	base = 8026eb2
 	trim = 
 	trimbase = 
