--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crazyflie_sim
-	previous = 
-	base = 24096bf
+	previous = 24096bf
+	base = 5287c6d
 	trim = 
 	trimbase = 
