--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_sim
-	previous = 
-	base = fd4e286
+	previous = fd4e286
+	base = e55a9ac
 	trim = 
 	trimbase = 
