--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crazyflie_examples
-	previous = 
-	base = 2a2d285
+	previous = 2a2d285
+	base = 1e52937
 	trim = 
 	trimbase = 
