--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_examples
-	previous = 
-	base = 0dd2ce5
+	previous = 0dd2ce5
+	base = e9f0dd8
 	trim = 
 	trimbase = 
