--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie
-	previous = 
-	base = 705ff18
+	previous = 705ff18
+	base = 9dc97b3
 	trim = 
 	trimbase = 
