--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_examples
-	previous = 
-	base = 47b4af5
+	previous = 47b4af5
+	base = 03cc37f
 	trim = 
 	trimbase = 
