--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_py
-	previous = 
-	base = fa0336c
+	previous = fa0336c
+	base = 4c13feb
 	trim = 
 	trimbase = 
