--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_sim
-	previous = 
-	base = 059e624
+	previous = 059e624
+	base = 1f14f33
 	trim = 
 	trimbase = 
