--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crazyflie_interfaces
-	previous = 
-	base = 2d7d248
+	previous = 2d7d248
+	base = c0256b7
 	trim = 
 	trimbase = 
