--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crazyflie_examples
-	previous = 
-	base = 1b4e4b3
+	previous = 1b4e4b3
+	base = 8362ca9
 	trim = 
 	trimbase = 
