--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crazyflie_py
-	previous = 
-	base = 77f7e9a
+	previous = 77f7e9a
+	base = ad12655
 	trim = 
 	trimbase = 
