--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crazyflie_py
-	previous = 
-	base = 6a6c325
+	previous = 6a6c325
+	base = 8b8d3e4
 	trim = 
 	trimbase = 
