--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crazyflie_interfaces
-	previous = 
-	base = 4f9228a
+	previous = 4f9228a
+	base = 7b09add
 	trim = 
 	trimbase = 
