--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crazyflie_interfaces
-	previous = 
-	base = 6c0beba
+	previous = 6c0beba
+	base = f9c7a70
 	trim = 
 	trimbase = 
