--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crazyflie
-	previous = 
-	base = b384eb5
+	previous = b384eb5
+	base = bb5f8b0
 	trim = 
 	trimbase = 
