--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crazyflie
-	previous = 
-	base = 007985a
+	previous = 007985a
+	base = a7c8aad
 	trim = 
 	trimbase = 
