--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crazyflie_sim
-	previous = 
-	base = d5140c3
+	previous = d5140c3
+	base = 5855323
 	trim = 
 	trimbase = 
