--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = c2b1f27
-	trim = 
-	trimbase = 
+	base = 3c9b17d
+	trim = crazyflie_sim
+	trimbase = c2b1f27
