--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = 58f2ad4
-	trim = 
-	trimbase = 
+	base = 2dd3a5f
+	trim = crazyflie_examples
+	trimbase = 58f2ad4
