--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = 33e0635
-	trim = 
-	trimbase = 
+	base = 818b74f
+	trim = crazyflie_interfaces
+	trimbase = 33e0635
