--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = 1477571
-	trim = 
-	trimbase = 
+	base = 6c68e43
+	trim = crazyflie_py
+	trimbase = 1477571
