--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f753a8c
-	base = c8535b5
-	trim = 
-	trimbase = 
+	base = a056790
+	trim = crazyflie
+	trimbase = c8535b5
