--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crazyflie_examples
-	previous = 
-	base = 2dd3a5f
+	previous = 2dd3a5f
+	base = 72d26dc
 	trim = 
 	trimbase = 
