--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crazyflie_examples
-	previous = 
-	base = 9d57428
+	previous = 9d57428
+	base = 8d3ff60
 	trim = 
 	trimbase = 
