--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crazyflie_sim
-	previous = 
-	base = 3c9b17d
+	previous = 3c9b17d
+	base = 769904f
 	trim = 
 	trimbase = 
