--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crazyflie_sim
-	previous = 
-	base = dcc07bd
+	previous = dcc07bd
+	base = 05988c3
 	trim = 
 	trimbase = 
