--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crazyflie_py
-	previous = 
-	base = 6c68e43
+	previous = 6c68e43
+	base = aa5d4b4
 	trim = 
 	trimbase = 
