--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crazyflie_py
-	previous = 
-	base = 4bb7883
+	previous = 4bb7883
+	base = 9699cd9
 	trim = 
 	trimbase = 
