--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crazyflie_interfaces
-	previous = 
-	base = 818b74f
+	previous = 818b74f
+	base = a25f589
 	trim = 
 	trimbase = 
