--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crazyflie_interfaces
-	previous = 
-	base = 6426439
+	previous = 6426439
+	base = 8dd4b1a
 	trim = 
 	trimbase = 
