--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crazyflie
-	previous = 
-	base = a056790
+	previous = a056790
+	base = 4087e26
 	trim = 
 	trimbase = 
