--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crazyflie
-	previous = 
-	base = 6c7fc69
+	previous = 6c7fc69
+	base = deec0f7
 	trim = 
 	trimbase = 
