--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crazyflie_py
-	previous = 
-	base = 9ebe3fa
+	previous = 9ebe3fa
+	base = acc2e55
 	trim = 
 	trimbase = 
