--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crazyflie
-	previous = 
-	base = 56ed058
+	previous = 56ed058
+	base = 66af4d3
 	trim = 
 	trimbase = 
