--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crazyflie_sim
-	previous = 
-	base = af09aad
+	previous = af09aad
+	base = d62363c
 	trim = 
 	trimbase = 
