--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crazyflie_interfaces
-	previous = 
-	base = f2c5f40
+	previous = f2c5f40
+	base = bb77004
 	trim = 
 	trimbase = 
