--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crazyflie_examples
-	previous = 
-	base = 551ec98
+	previous = 551ec98
+	base = b8d9c1e
 	trim = 
 	trimbase = 
