--- a/.github/workflows/ci-ros2.yml
+++ b/.github/workflows/ci-ros2.yml
@@ -12,10 +12,12 @@ jobs:
   build_docker: # On Linux, use docker
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: False
       matrix:
         ros_distribution:
           - humble
           - jazzy
+          - rolling
 
         # Define the Docker image(s) associated with each ROS distribution.
         include:
@@ -27,6 +29,11 @@ jobs:
           # Jazzy Jalisco (May 2024 - May 2029)
           - docker_image: rostooling/setup-ros-docker:ubuntu-noble-ros-jazzy-ros-base-latest
             ros_distribution: jazzy
+            ros_version: 2
+
+          # Rolling Ridley  (June 2020 - Present)
+          - docker_image: rostooling/setup-ros-docker:ubuntu-noble-ros-rolling-ros-base-latest
+            ros_distribution: rolling
             ros_version: 2
 
     container:
