--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = b4b48da
+	base = 1b64905
 	trim = crazyflie_sim
-	trimbase = 
+	trimbase = b4b48da
