--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 7fda8bb
+	base = 8addae9
 	trim = crazyflie_examples
-	trimbase = 
+	trimbase = 7fda8bb
