--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 21a729a
+	base = 5874b8b
 	trim = crazyflie_interfaces
-	trimbase = 
+	trimbase = 21a729a
