--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 3906bee
+	base = 4d01649
 	trim = crazyflie_py
-	trimbase = 
+	trimbase = 3906bee
