--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 2c0d4d1
+	base = 802a764
 	trim = crazyflie
-	trimbase = 
+	trimbase = 2c0d4d1
