Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0": ["Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"]}
+{"1.0.1": ["Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"], "1.0.0": ["Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"]}
