--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 874ec41
+	base = 64a6cfc
 	trim = crazyflie_sim
-	trimbase = 
+	trimbase = 874ec41
