--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 40058c1
+	base = cb71daa
 	trim = crazyflie_examples
-	trimbase = 
+	trimbase = 40058c1
