--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = 612c517
+	base = 5c6cbac
 	trim = crazyflie_interfaces
-	trimbase = 
+	trimbase = 612c517
