--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = e4fa0ca
+	base = a02a6de
 	trim = crazyflie_py
-	trimbase = 
+	trimbase = e4fa0ca
