--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a91b6d
-	base = d23b56f
+	base = 6701a11
 	trim = crazyflie
-	trimbase = 
+	trimbase = d23b56f
