--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e563fea
-	base = 999d028
+	base = 6e227f8
 	trim = crazyflie_sim
-	trimbase = 
+	trimbase = 999d028
