--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e563fea
-	base = 6d400fe
+	base = 5bb8820
 	trim = crazyflie_examples
-	trimbase = 
+	trimbase = 6d400fe
