--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e563fea
-	base = d350f46
+	base = 8dd920d
 	trim = crazyflie_interfaces
-	trimbase = 
+	trimbase = d350f46
