--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e563fea
-	base = 3629d20
+	base = 084e42a
 	trim = crazyflie_py
-	trimbase = 
+	trimbase = 3629d20
