--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e563fea
-	base = bc14a68
+	base = 44a9a0d
 	trim = crazyflie
-	trimbase = 
+	trimbase = bc14a68
