--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.1-1": ["Mon Jun 30 2025", "Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"], "1.0.0-1": ["Sun Jun 22 2025", "Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"]}
+{"1.0.2-1": ["Wed Jul 02 2025", "Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"], "1.0.1-1": ["Mon Jun 30 2025", "Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"], "1.0.0-1": ["Sun Jun 22 2025", "Wolfgang H\u00f6nig, Kimberly McGuire", "hoenig@tu-berlin.de"]}
