--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = 9112f62
+	base = ec252b7
 	trim = crazyflie_sim
-	trimbase = 
+	trimbase = 9112f62
