--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = b1758ff
+	base = eaba128
 	trim = crazyflie_examples
-	trimbase = 
+	trimbase = b1758ff
