--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = bd4114b
+	base = 5dd25c3
 	trim = crazyflie_interfaces
-	trimbase = 
+	trimbase = bd4114b
