--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = d96567e
+	base = 1b6b17e
 	trim = crazyflie_py
-	trimbase = 
+	trimbase = d96567e
