--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = f76dac6
+	base = f0557d6
 	trim = crazyflie
-	trimbase = 
+	trimbase = f76dac6
