--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = fec4b3c
+	base = 5aa8946
 	trim = crazyflie_sim
-	trimbase = 
+	trimbase = fec4b3c
