--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = 965dd68
+	base = 634c530
 	trim = crazyflie_examples
-	trimbase = 
+	trimbase = 965dd68
