--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = d1e095e
+	base = 89817a6
 	trim = crazyflie_interfaces
-	trimbase = 
+	trimbase = d1e095e
