--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = ed34e2d
+	base = a0b4227
 	trim = crazyflie_py
-	trimbase = 
+	trimbase = ed34e2d
