--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4de7788
-	base = 49ae250
+	base = b6be69e
 	trim = crazyflie
-	trimbase = 
+	trimbase = 49ae250
