--- a/package.xml
+++ b/package.xml
@@ -2,9 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>crazyflie</name>
-  <version>1.0.1</version>
+  <version>1.0.3</version>
   <description>ROS 2 Package for Bitcraze Crazyflie robots</description>
-  <maintainer email="hoenig@tu-berlin.de">Wolfgang Hönig, Kimberly McGuire</maintainer>
+  <maintainer email="hoenig@tu-berlin.de">Wolfgang Hönig</maintainer>
+  <maintainer email="kimberleymcguire@gmail.com">Kimberly N. McGuire</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
